# ai-ml-engineering-portfolio

./: .gitattributes  .gitignore  README.md  run_all_tests.ps1  run_all_tests.sh
.github/workflows/: ci.yml
local-llm-document-qa-rag/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
local-llm-document-qa-rag/data/docs/: evaluation_guide.md  ollama_setup.md  rag_architecture.md
local-llm-document-qa-rag/data/eval/: questions.jsonl
local-llm-document-qa-rag/src/rag_app/: __init__.py  api.py  chunker.py  cli.py  document_loader.py  embeddings.py  evaluate.py  llm.py  models.py  pipeline.py  vector_store.py
local-llm-document-qa-rag/tests/: test_chunker.py  test_evaluate.py  test_pipeline.py
ml-model-deployment-pipeline/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ml-model-deployment-pipeline/models/: model_v1.pt  model_v2.pt  registry.json
ml-model-deployment-pipeline/monitoring/: prometheus.yml
ml-model-deployment-pipeline/monitoring/grafana/dashboards/: ml_service_dashboard.json
ml-model-deployment-pipeline/src/ml_service/: __init__.py  app.py  features.py  model.py  monitoring.py  registry.py  schemas.py  train.py
ml-model-deployment-pipeline/tests/: test_app.py  test_features.py  test_registry.py
real-time-security-log-detection-pipeline/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
real-time-security-log-detection-pipeline/data/: expected_alert_types.txt
real-time-security-log-detection-pipeline/monitoring/: prometheus.yml
real-time-security-log-detection-pipeline/monitoring/grafana/dashboards/: security_pipeline_dashboard.json
real-time-security-log-detection-pipeline/scripts/: run_offline_demo.sh
real-time-security-log-detection-pipeline/src/security_pipeline/: __init__.py  consumer.py  detector.py  generate_logs.py  log_parser.py  models.py  offline_demo.py  producer.py  prometheus_metrics.py
real-time-security-log-detection-pipeline/tests/: test_detector.py  test_log_parser.py  test_offline_demo.py
(+2 files in other folders)
