[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "security-log-detection-pipeline"
version = "0.1.0"
description = "Kafka-based security log detection pipeline with brute-force and anomalous sign-in detection."
requires-python = ">=3.10"
dependencies = [
  "prometheus-client>=0.17",
  "kafka-python>=2.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
security-offline-demo = "security_pipeline.offline_demo:main"
security-generate-logs = "security_pipeline.generate_logs:main"
